# llm-commit-msg

./: .pre-commit-config.yaml  README.md  __main__.py  flake.nix  pyproject.toml
.github/workflows/: test.yml
llm_commit_msg/: __init__.py  generate.py  main.py
nvim/lua/llm-commit-msg/: init.lua
tests/unit/: test_main.py
